--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "uniapp-cli-ts-v3-template",
   "version": "1.0.0",
   "author": {
-    "name": "鹏多多",
-    "email": "993080086@qq.com",
-    "url": "https://github.com/wp993080086"
+    "name": "jingpingxie",
+    "email": "519504115@qq.com",
+    "url": "https://github.com/jingpingxie/maxgo-app"
   },
   "scripts": {
     "serve": "uni -p mp-weixin",
@@ -36,13 +36,14 @@
     "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3040120220308001",
     "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3040120220308001",
     "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3040120220308001",
-    "@vitejs/plugin-vue": "^2.2.4",
     "@dcloudio/uni-ui": "^1.4.12",
-    "vk-uview-ui": "^1.3.3",
-    "pinia": "^2.0.12",
-    "vue": "^3.2.31",
+    "@vitejs/plugin-vue": "^2.2.4",
     "crypto-js": "^4.1.1",
-    "jsencrypt": "^3.2.1"
+    "docdash": "^1.2.0",
+    "jsencrypt": "^3.2.1",
+    "pinia": "^2.0.12",
+    "vk-uview-ui": "^1.3.3",
+    "vue": "^3.2.31"
   },
   "devDependencies": {
     "@dcloudio/types": "^2.5.18",
@@ -52,8 +53,8 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "cz-conventional-changelog": "^3.3.0",
     "autoprefixer": "^10.4.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.12.0",
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.4",
